Ensure the scheduler always changes from UseCase LOADING to NONE.

Always mark a first meaningful paint candidate to ensure the scheduler
changes UseCase from LOADING to NONE. This is necessary because fast
loading pages may only see one contentful paint which means the FMPD
doesn't fire again and the Scheduler stays in LOADING long after the page
is done.

BUG=699101
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2738813003
Cr-Commit-Position: refs/heads/master@{#457049}

Former-commit-id: 9d780d130566384f6aff63f127e92340f31a815d